feat: add true userless login and refactor Login page (#7676)

--- a/lang/bn.json
+++ b/lang/bn.json
@@ -221,6 +221,7 @@
   "Attach": "সংযুক্ত করুন",
   "At which time should we send the notification, when the reminder occurs?": "কোন সময়ে আমরা বিজ্ঞপ্তি পাঠাতে হবে, যখন অনুস্মারক ঘটে?",
   "Audio-only call": "শুধুমাত্র অডিও কল",
+  "Authenticate using your password:": "আপনার পাসওয়ার্ড ব্যবহার করে প্রমাণীকরণ:",
   "Auto saved a few seconds ago": "স্বয়ংক্রিয় কয়েক সেকেন্ড আগে সংরক্ষিত",
   "Available modules:": "উপলব্ধ মডিউল:",
   "Avatar": "অবতার",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Monica তুলনায়:",
   "Configure how we should notify you": "আমরা আপনাকে কিভাবে অবহিত করব তা কনফিগার করুন",
   "Confirm": "নিশ্চিত করুন",
+  "Confirm access": "অ্যাক্সেস নিশ্চিত করুন",
   "Confirm Password": "পাসওয়ার্ড নিশ্চিত করুন",
+  "Confirm your passkey": "আপনার পাসকি নিশ্চিত করুন",
   "Conflict": "দ্বন্দ্ব",
   "Connect": "সংযোগ করুন",
   "Connected": "সংযুক্ত",
@@ -496,7 +499,7 @@
   "Forbidden": "নিষিদ্ধ",
   "Forgot your password?": "আপনার পাসওয়ার্ড ভুলে গেছেন?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "আপনার পাসওয়ার্ড ভুলে গেছেন? সমস্যা নেই, শুধু আমাদের আপনার ই-মেইল ঠিকানা জানান এবং আমরা আপনাকে একটি পাসওয়ার্ড রিসেট লিঙ্ক ইমেইল করবো, সেটি আপনাকে একটি নতুন পাসওয়ার্ড নির্বাচন করার অনুমতি দেবে।",
-  "For your security, please confirm your password to continue.": "আপনার নিরাপত্তার জন্য, অনুগ্রহ করে আপনার পাসওয়ার্ড নিশ্চিত করে চালিয়ে যান৷",
+  "For your security, please confirm the access to continue.": "আপনার সুরক্ষার জন্য, দয়া করে অ্যাক্সেস চালিয়ে যাওয়ার বিষয়টি নিশ্চিত করুন।",
   "Found": "পাওয়া গেছে",
   "Friday": "শুক্রবার",
   "Friend": "বন্ধু",
@@ -659,8 +662,8 @@
   "Log In": "লগইন",
   "Login": "লগইন",
   "Login with:": "লগইন করুন:",
-  "Logout": "লগ-আউট",
   "Log Out": "লগ-আউট",
+  "Logout": "লগ-আউট",
   "Log Out Other Browser Sessions": "অন্য ব্রাউজার সেশনে লগ আউট করুন",
   "Longest streak": "দীর্ঘতম ধারা",
   "Loop Detected": "লুপ সনাক্ত করা হয়েছে",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "খোলা রাস্তার মানচিত্র একটি দুর্দান্ত গোপনীয়তার বিকল্প, তবে কম বিবরণ দেয়।",
   "Open Telegram to validate your identity": "আপনার পরিচয় যাচাই করতে টেলিগ্রাম খুলুন",
   "optional": "ঐচ্ছিক",
+  "Or": "বা",
   "Or create a new one": "অথবা একটি নতুন তৈরি করুন",
   "Or filter by type": "অথবা প্রকার অনুসারে ফিল্টার করুন",
   "Origin Is Unreachable": "অরিজিন ইজ অরিচেবল",
@@ -993,8 +997,10 @@
   "significant other": "উল্লেখযোগ্য অন্যান্য",
   "Sign In": "সাইন ইন করুন",
   "Sign in to your account": "আপনার অ্যাকাউন্টে সাইন ইন করুন",
+  "Sign in with a passkey": "একটি পাসকি দিয়ে সাইন ইন করুন",
   "Sign up for an account": "অ্যাকাউন্ট খুলুন",
   "Sikh": "শিখ",
+  "Simply connect with:": "কেবল সাথে সংযোগ স্থাপন করুন:",
   "Slept :count hour|Slept :count hours": ":count ঘণ্টা ঘুমিয়েছেন|:count ঘন্টা ঘুমিয়েছে",
   "Slice of life": "এক খন্ড জীবন",
   "Slices of life": "জীবনের টুকরো টুকরো",
@@ -1346,6 +1352,7 @@
   "View log": "লগ দেখুন",
   "View on map": "মানচিত্রে দেখুন",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Monica (অ্যাপ্লিকেশন) আপনাকে চিনতে কয়েক সেকেন্ড অপেক্ষা করুন। এটি কাজ করে কিনা তা দেখতে আমরা আপনাকে একটি জাল বিজ্ঞপ্তি পাঠাব।",
+  "Waiting for input from browser interaction…": "ব্রাউজার ইন্টারঅ্যাকশন থেকে ইনপুট জন্য অপেক্ষা করছি ...",
   "Waiting for key…": "চাবির জন্য অপেক্ষা করা হচ্ছে...",
   "Walked": "হেঁটেছেন",
   "Wallpaper": "ওয়ালপেপার",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "প্রমাণীকরণ সক্রিয় করা হয় দুই ফ্যাক্টর, আপনি অনুমোদনের সময় একটি নিরাপদ, র্যান্ডম টোকেন জন্য অনুরোধ করা হবে । আপনি আপনার ফোন এর গুগল প্রমাণকারী অ্যাপ্লিকেশন থেকে এই টোকেন উদ্ধার হতে পারে ।",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "যখন দুটি ফ্যাক্টর প্রমাণীকরণ সক্ষম করা হয়, আপনাকে প্রমাণীকরণের সময় একটি নিরাপদ, এলোমেলো টোকেনের জন্য অনুরোধ করা হবে। আপনি আপনার ফোনের প্রমাণীকরণকারী অ্যাপ্লিকেশন থেকে এই টোকেনটি পুনরুদ্ধার করতে পারেন।",
   "When was the loan made?": "কখন ঋণ করা হয়েছিল?",
+  "When you are ready, authenticate using the button below:": "আপনি প্রস্তুত থাকলে নীচের বোতামটি ব্যবহার করে প্রমাণীকরণ করুন:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "আপনি যখন দুটি পরিচিতির মধ্যে একটি সম্পর্ককে সংজ্ঞায়িত করেন, উদাহরণস্বরূপ একটি পিতা-পুত্রের সম্পর্ক, Monica দুটি সম্পর্ক তৈরি করে, প্রতিটি পরিচিতির জন্য একটি:",
   "Which email address should we send the notification to?": "আমরা কোন ইমেল ঠিকানায় বিজ্ঞপ্তি পাঠাতে হবে?",
   "Who called?": "কে ডেকেছিল?",
