--- a/lang/el.json
+++ b/lang/el.json
@@ -221,6 +221,7 @@
   "Attach": "Επισυνάψετε",
   "At which time should we send the notification, when the reminder occurs?": "Πότε πρέπει να στείλουμε την ειδοποίηση, όταν εμφανίζεται η υπενθύμιση;",
   "Audio-only call": "Κλήση μόνο με ήχο",
+  "Authenticate using your password:": "Πιστοποιήστε ταυτότητας χρησιμοποιώντας τον κωδικό πρόσβασής σας:",
   "Auto saved a few seconds ago": "Αυτόματη αποθήκευση πριν από λίγα δευτερόλεπτα",
   "Available modules:": "Διαθέσιμες ενότητες:",
   "Avatar": "Avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Σε σύγκριση με τη Monica:",
   "Configure how we should notify you": "Διαμορφώστε τον τρόπο με τον οποίο πρέπει να σας ειδοποιούμε",
   "Confirm": "Επιβεβαίωση",
+  "Confirm access": "Επιβεβαιώστε την πρόσβαση",
   "Confirm Password": "Επιβεβαίωση Κωδικού",
+  "Confirm your passkey": "Επιβεβαιώστε το κλειδί σας",
   "Conflict": "σύγκρουση",
   "Connect": "Σύνδεση",
   "Connected": "Συνδεδεμένος",
@@ -496,7 +499,7 @@
   "Forbidden": "Απαγορευμένο",
   "Forgot your password?": "Ξεχάσατε τον κωδικό σας;",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Ξεχάσατε τον κωδικό σας; Κανένα πρόβλημα. Δώστε μας την διεύθυνση ηλεκτρονικού ταχυδρομείου σας και θα σας στείλουμε ένα email με έναν σύνδεσμο (link), που θα σας επιστρέψει να δημιουργήσετε έναν νέο κωδικό πρόσβασης.",
-  "For your security, please confirm your password to continue.": "Για την ασφάλειά σας, επιβεβαιώστε τον κωδικό πρόσβασής σας για να συνεχίσετε.",
+  "For your security, please confirm the access to continue.": "Για την ασφάλειά σας, επιβεβαιώστε την πρόσβαση για να συνεχίσετε.",
   "Found": "Βρέθηκαν",
   "Friday": "Παρασκευή",
   "Friend": "Φίλε",
@@ -659,8 +662,8 @@
   "Log In": "Σύνδεση",
   "Login": "Είσοδος",
   "Login with:": "Συνδέσου με:",
-  "Logout": "Έξοδος",
   "Log Out": "Αποσύνδεση",
+  "Logout": "Έξοδος",
   "Log Out Other Browser Sessions": "Αποσυνδεθείτε Από Άλλες Συνεδρίες Του Προγράμματος Περιήγησης",
   "Longest streak": "Το μεγαλύτερο σερί",
   "Loop Detected": "Εντοπίστηκε βρόχος",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Οι Open Street Maps είναι μια εξαιρετική εναλλακτική λύση απορρήτου, αλλά προσφέρουν λιγότερες λεπτομέρειες.",
   "Open Telegram to validate your identity": "Ανοίξτε το Telegram για να επικυρώσετε την ταυτότητά σας",
   "optional": "προαιρετικός",
+  "Or": "Ή",
   "Or create a new one": "Ή δημιουργήστε ένα νέο",
   "Or filter by type": "Ή φιλτράρετε ανά τύπο",
   "Origin Is Unreachable": "Η προέλευση είναι απρόσιτη",
@@ -993,8 +997,10 @@
   "significant other": "ΣΥΝΤΡΟΦΟΣ",
   "Sign In": "Σύνδεση",
   "Sign in to your account": "Συνδεθείτε στο λογαριασμό σας",
+  "Sign in with a passkey": "Συνδεθείτε με ένα πέρασμα",
   "Sign up for an account": "Εγγραφείτε για λογαριασμό",
   "Sikh": "Σιχ",
+  "Simply connect with:": "Απλά συνδεθείτε με:",
   "Slept :count hour|Slept :count hours": "Κοιμήθηκε :count ώρα|Κοιμήθηκε :count ώρες",
   "Slice of life": "Κομμάτι της ζωής",
   "Slices of life": "Φέτες ζωής",
@@ -1346,6 +1352,7 @@
   "View log": "Προβολή αρχείου καταγραφής",
   "View on map": "Προβολή στο χάρτη",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Περιμένετε μερικά δευτερόλεπτα για να σας αναγνωρίσει η Monica (η εφαρμογή). Θα σας στείλουμε μια ψεύτικη ειδοποίηση για να δούμε αν λειτουργεί.",
+  "Waiting for input from browser interaction…": "Αναμονή για εισροή από την αλληλεπίδραση του προγράμματος περιήγησης…",
   "Waiting for key…": "Αναμονή για το κλειδί…",
   "Walked": "Περπάτησε",
   "Wallpaper": "Ταπετσαρία",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Όταν είναι ενεργοποιημένος ο έλεγχος ταυτότητας δύο παραγόντων, θα σας ζητηθεί ένα ασφαλές, τυχαίο διακριτικό κατά τη διάρκεια του ελέγχου ταυτότητας. Μπορείτε να ανακτήσετε αυτό το διακριτικό από την εφαρμογή Google Authenticator του τηλεφώνου σας.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Όταν είναι ενεργοποιημένος ο έλεγχος ταυτότητας δύο παραγόντων, θα σας ζητηθεί ένα ασφαλές, τυχαίο διακριτικό κατά τον έλεγχο ταυτότητας. Μπορείτε να ανακτήσετε αυτό το διακριτικό από την εφαρμογή Authenticator του τηλεφώνου σας.",
   "When was the loan made?": "Πότε έγινε το δάνειο;",
+  "When you are ready, authenticate using the button below:": "Όταν είστε έτοιμοι, πιστοποιήστε το κουμπί παρακάτω:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Όταν ορίζετε μια σχέση μεταξύ δύο επαφών, για παράδειγμα μια σχέση πατέρα-γιου, η Monica δημιουργεί δύο σχέσεις, μία για κάθε επαφή:",
   "Which email address should we send the notification to?": "Σε ποια διεύθυνση email πρέπει να στείλουμε την ειδοποίηση;",
   "Who called?": "Ποιος κάλεσε?",
