--- a/lang/es.json
+++ b/lang/es.json
@@ -221,6 +221,7 @@
   "Attach": "Adjuntar",
   "At which time should we send the notification, when the reminder occurs?": "¿En qué momento debemos enviar la notificación, cuando se produce el recordatorio?",
   "Audio-only call": "Llamada de solo audio",
+  "Authenticate using your password:": "Autenticar usando su contraseña:",
   "Auto saved a few seconds ago": "Guardado automáticamente hace unos segundos.",
   "Available modules:": "Módulos disponibles:",
   "Avatar": "Avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Comparado con Monica:",
   "Configure how we should notify you": "Configura cómo debemos avisarte",
   "Confirm": "Confirmar",
+  "Confirm access": "Confirmar el acceso",
   "Confirm Password": "Confirmar contraseña",
+  "Confirm your passkey": "Confirma tu tecla de pass",
   "Conflict": "Conflicto",
   "Connect": "Conectar",
   "Connected": "Conectado",
@@ -496,7 +499,7 @@
   "Forbidden": "Prohibido",
   "Forgot your password?": "¿Olvidó su contraseña?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "¿Olvidó su contraseña? No hay problema. Simplemente déjenos saber su dirección de correo electrónico y le enviaremos un enlace para restablecer la contraseña que le permitirá elegir una nueva.",
-  "For your security, please confirm your password to continue.": "Por su seguridad, confirme su contraseña para continuar.",
+  "For your security, please confirm the access to continue.": "Para su seguridad, confirme el acceso para continuar.",
   "Found": "Encontrado",
   "Friday": "Viernes",
   "Friend": "Amigo",
@@ -659,8 +662,8 @@
   "Log In": "Iniciar sesión",
   "Login": "Iniciar sesión",
   "Login with:": "Inicia con:",
-  "Logout": "Finalizar sesión",
   "Log Out": "Finalizar sesión",
+  "Logout": "Finalizar sesión",
   "Log Out Other Browser Sessions": "Cerrar las demás sesiones",
   "Longest streak": "Racha más larga",
   "Loop Detected": "Bucle detectado",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps es una excelente alternativa de privacidad, pero ofrece menos detalles.",
   "Open Telegram to validate your identity": "Abre Telegram para validar tu identidad",
   "optional": "opcional",
+  "Or": "O",
   "Or create a new one": "O crear uno nuevo",
   "Or filter by type": "O filtrar por tipo",
   "Origin Is Unreachable": "El origen es inalcanzable",
@@ -993,8 +997,10 @@
   "significant other": "pareja",
   "Sign In": "Iniciar sesión",
   "Sign in to your account": "Iniciar sesión en su cuenta",
+  "Sign in with a passkey": "Iniciar sesión con una llave de passación",
   "Sign up for an account": "Regístrese para obtener una cuenta",
   "Sikh": "sij",
+  "Simply connect with:": "Simplemente conéctese con:",
   "Slept :count hour|Slept :count hours": "Dormí :count hora|Dormí :count horas",
   "Slice of life": "Rebanada de vida",
   "Slices of life": "Rebanadas de vida",
@@ -1346,6 +1352,7 @@
   "View log": "Ver registro",
   "View on map": "Ver en el mapa",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Espera unos segundos a que Monica (la aplicación) te reconozca. Le enviaremos una notificación falsa para ver si funciona.",
+  "Waiting for input from browser interaction…": "Esperando la entrada de la interacción del navegador ...",
   "Waiting for key…": "Esperando la llave...",
   "Walked": "Caminó",
   "Wallpaper": "Fondo de pantalla",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Cuando la autenticación de dos factores esté habilitada, le pediremos un token aleatorio seguro durante la autenticación. Puede recuperar este token desde la aplicación Google Authenticator de su teléfono.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Cuando la autenticación de dos factores está habilitada, se le solicitará un token aleatorio seguro durante la autenticación. Puede recuperar este token desde la aplicación Authenticator de su teléfono.",
   "When was the loan made?": "¿Cuándo se hizo el préstamo?",
+  "When you are ready, authenticate using the button below:": "Cuando esté listo, autentique usando el botón a continuación:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Cuando defines una relación entre dos contactos, por ejemplo una relación padre-hijo, Monica crea dos relaciones, una para cada contacto:",
   "Which email address should we send the notification to?": "¿A qué dirección de correo electrónico debemos enviar la notificación?",
   "Who called?": "¿Quien llamó?",
