--- a/lang/fr.json
+++ b/lang/fr.json
@@ -221,6 +221,7 @@
   "Attach": "Attacher",
   "At which time should we send the notification, when the reminder occurs?": "À quel moment devons-nous envoyer la notification, lorsque le rappel intervient ?",
   "Audio-only call": "Appel audio uniquement",
+  "Authenticate using your password:": "Authentifiez-vous en utilisant votre mot de passe :",
   "Auto saved a few seconds ago": "Enregistrement automatique il y a quelques secondes",
   "Available modules:": "Modules disponibles :",
   "Avatar": "Avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Comparé à Monica :",
   "Configure how we should notify you": "Configurez la manière dont nous devons vous informer",
   "Confirm": "Confirmer",
+  "Confirm access": "Confirmer l’accès",
   "Confirm Password": "Confirmer le mot de passe",
+  "Confirm your passkey": "Confirmez votre clé de sécurté",
   "Conflict": "Conflit",
   "Connect": "Connecter",
   "Connected": "Connecté",
@@ -496,7 +499,7 @@
   "Forbidden": "Interdit",
   "Forgot your password?": "Mot de passe oublié ?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Mot de passe oublié ? Pas de soucis. Veuillez nous indiquer votre adresse e-mail et nous vous enverrons un lien de réinitialisation du mot de passe.",
-  "For your security, please confirm your password to continue.": "Par mesure de sécurité, veuillez confirmer votre mot de passe pour continuer.",
+  "For your security, please confirm the access to continue.": "Pour votre sécurité, veuillez confirmer l’accès pour continuer.",
   "Found": "Trouvé",
   "Friday": "Vendredi",
   "Friend": "Ami",
@@ -659,8 +662,8 @@
   "Log In": "Se connecter",
   "Login": "Connexion",
   "Login with:": "Se connecter avec :",
-  "Logout": "Déconnexion",
   "Log Out": "Se déconnecter",
+  "Logout": "Déconnexion",
   "Log Out Other Browser Sessions": "Déconnecter les sessions ouvertes sur d’autres navigateurs",
   "Longest streak": "La plus longue série",
   "Loop Detected": "Boucle détectée",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps est une excellente alternative en matière de confidentialité, mais offre moins de détails.",
   "Open Telegram to validate your identity": "Ouvrez Telegram pour valider votre identité",
   "optional": "facultatif",
+  "Or": "Ou",
   "Or create a new one": "Ou créez-en un nouveau",
   "Or filter by type": "Ou filtrer par type",
   "Origin Is Unreachable": "L’origine est inaccessible",
@@ -993,8 +997,10 @@
   "significant other": "moitié",
   "Sign In": "Se connecter",
   "Sign in to your account": "Connectez-vous à votre compte",
+  "Sign in with a passkey": "Connectez-vous avec une clé de sécurité",
   "Sign up for an account": "Créer un compte",
   "Sikh": "Sikh",
+  "Simply connect with:": "Connectez-vous simplement avec :",
   "Slept :count hour|Slept :count hours": "A dormi :count heure|A dormi :count heures",
   "Slice of life": "Tranche de vie",
   "Slices of life": "Tranches de vie",
@@ -1346,6 +1352,7 @@
   "View log": "Afficher le journal",
   "View on map": "Afficher sur la carte",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Attendez quelques secondes que Monica (l’application) vous reconnaisse. Nous vous enverrons une fausse notification pour voir si cela fonctionne.",
+  "Waiting for input from browser interaction…": "En attente de l’interaction avec le navigateur…",
   "Waiting for key…": "En attente de la clé…",
   "Walked": "A marché",
   "Wallpaper": "Fond d’écran",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Lorsque l’authentification à deux facteurs est activée, vous serez invité à saisir un jeton aléatoire sécurisé lors de l’authentification. Vous pouvez récupérer ce jeton depuis l’application Google Authenticator de votre téléphone.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Lorsque l’authentification à deux facteurs est activée, vous serez invité à fournir un jeton sécurisé et aléatoire lors de l’authentification. Vous pouvez récupérer ce jeton depuis l’application Authenticator de votre téléphone.",
   "When was the loan made?": "Quand le prêt a-t-il été accordé ?",
+  "When you are ready, authenticate using the button below:": "Lorsque vous êtes prêt⋅e, authentifiez-vous avec le bouton ci-dessous :",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Lorsque vous définissez une relation entre deux contacts, par exemple une relation père-fils, Monica crée deux relations, une pour chaque contact :",
   "Which email address should we send the notification to?": "À quelle adresse e-mail devons-nous envoyer la notification ?",
   "Who called?": "Qui a appelé?",
