--- a/lang/it.json
+++ b/lang/it.json
@@ -221,6 +221,7 @@
   "Attach": "Collegare",
   "At which time should we send the notification, when the reminder occurs?": "A che ora dovremmo inviare la notifica, quando avviene il promemoria?",
   "Audio-only call": "Chiamata solo audio",
+  "Authenticate using your password:": "Autentica utilizzando la tua password:",
   "Auto saved a few seconds ago": "Salvata automaticamente pochi secondi fa",
   "Available modules:": "Moduli disponibili:",
   "Avatar": "Avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Rispetto a Monica:",
   "Configure how we should notify you": "Configura il modo in cui dovremmo avvisarti",
   "Confirm": "Conferma",
+  "Confirm access": "Conferma l’accesso",
   "Confirm Password": "Conferma Password",
+  "Confirm your passkey": "Conferma il tuo passkey",
   "Conflict": "Conflitto",
   "Connect": "Collega",
   "Connected": "Collegato",
@@ -496,7 +499,7 @@
   "Forbidden": "Vietato",
   "Forgot your password?": "Password dimenticata?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Password dimenticata? Nessun problema. Inserisci l’email sulla quale ricevere un link con il reset della password che ti consentirà di sceglierne una nuova.",
-  "For your security, please confirm your password to continue.": "Per la tua sicurezza, conferma la tua password per continuare.",
+  "For your security, please confirm the access to continue.": "Per la tua sicurezza, conferma l’accesso per continuare.",
   "Found": "Trovato",
   "Friday": "Venerdì",
   "Friend": "Amico",
@@ -659,8 +662,8 @@
   "Log In": "Accedi",
   "Login": "Accedi",
   "Login with:": "Entra con:",
-  "Logout": "Esci",
   "Log Out": "Esci",
+  "Logout": "Esci",
   "Log Out Other Browser Sessions": "Esci da altre sessioni del Browser",
   "Longest streak": "Serie più lunga",
   "Loop Detected": "Loop identificato",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps è un’ottima alternativa alla privacy, ma offre meno dettagli.",
   "Open Telegram to validate your identity": "Apri Telegram per convalidare la tua identità",
   "optional": "opzionale",
+  "Or": "O",
   "Or create a new one": "Oppure creane uno nuovo",
   "Or filter by type": "Oppure filtra per tipologia",
   "Origin Is Unreachable": "Origine non raggiungibile",
@@ -993,8 +997,10 @@
   "significant other": "partner",
   "Sign In": "Accedi",
   "Sign in to your account": "Accedi al tuo account",
+  "Sign in with a passkey": "Accedi con un passkey",
   "Sign up for an account": "Registrati per un account",
   "Sikh": "Sikh",
+  "Simply connect with:": "Semplicemente connettersi con:",
   "Slept :count hour|Slept :count hours": "Ho dormito :count ora|Ho dormito :count ore",
   "Slice of life": "Spaccato di vita",
   "Slices of life": "Spaccati di vita",
@@ -1346,6 +1352,7 @@
   "View log": "Vista del registro",
   "View on map": "Visualizza sulla mappa",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Attendi qualche secondo affinché Monica (l’applicazione) ti riconosca. Ti invieremo una notifica falsa per vedere se funziona.",
+  "Waiting for input from browser interaction…": "Aspettando l’input dall’interazione del browser ...",
   "Waiting for key…": "In attesa della chiave...",
   "Walked": "Camminava",
   "Wallpaper": "Sfondo",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Quando è abilitata l’autenticazione a due fattori, ti verrà richiesto un token casuale e sicuro durante l’autenticazione. Puoi recuperare questo token dall’applicazione Google Authenticator del tuo telefono.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Quando l’autenticazione a due fattori è abilitata, ti verrà richiesto un token casuale e sicuro durante l’autenticazione. Puoi recuperare questo token dall’applicazione Authenticator del tuo telefono.",
   "When was the loan made?": "Quando è stato concesso il prestito?",
+  "When you are ready, authenticate using the button below:": "Quando sei pronto, autentica utilizzando il pulsante in basso:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Quando definisci una relazione tra due contatti, ad esempio una relazione padre-figlio, Monica crea due relazioni, una per ciascun contatto:",
   "Which email address should we send the notification to?": "A quale indirizzo email dobbiamo inviare la notifica?",
   "Who called?": "Chi ha chiamato?",
