--- a/lang/ja.json
+++ b/lang/ja.json
@@ -221,6 +221,7 @@
   "Attach": "添付",
   "At which time should we send the notification, when the reminder occurs?": "リマインダーが発生したとき、どのタイミングで通知を送信すればよいですか?",
   "Audio-only call": "音声のみの通話",
+  "Authenticate using your password:": "パスワードを使用して認証：",
   "Auto saved a few seconds ago": "数秒前に自動保存されました",
   "Available modules:": "利用可能なモジュール:",
   "Avatar": "アバター",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Monicaと比較すると、",
   "Configure how we should notify you": "通知方法を設定する",
   "Confirm": "確認",
+  "Confirm access": "アクセスを確認します",
   "Confirm Password": "パスワード（確認用）",
+  "Confirm your passkey": "PassKeyを確認してください",
   "Conflict": "競合",
   "Connect": "接続",
   "Connected": "接続済み",
@@ -496,7 +499,7 @@
   "Forbidden": "禁止されています",
   "Forgot your password?": "パスワードを忘れた方はこちら",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "ご登録いただいたメールアドレスを入力してください。パスワード再設定用のURLをメールにてお送りします。",
-  "For your security, please confirm your password to continue.": "安全のため、パスワードを入力して続行してください。",
+  "For your security, please confirm the access to continue.": "あなたのセキュリティのために、継続するためのアクセスを確認してください。",
   "Found": "発見",
   "Friday": "金曜日",
   "Friend": "友達",
@@ -659,8 +662,8 @@
   "Log In": "ログイン",
   "Login": "ログイン",
   "Login with:": "でログイン：",
-  "Logout": "ログアウト",
   "Log Out": "ログアウト",
+  "Logout": "ログアウト",
   "Log Out Other Browser Sessions": "全ての端末からログアウト",
   "Longest streak": "最長連続記録",
   "Loop Detected": "ループを検出",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps はプライバシーを保護する優れた代替手段ですが、詳細情報はあまり提供されません。",
   "Open Telegram to validate your identity": "Telegramを開いて身元を確認してください",
   "optional": "オプション",
+  "Or": "または",
   "Or create a new one": "または、新しいものを作成する",
   "Or filter by type": "またはタイプでフィルタリングします",
   "Origin Is Unreachable": "オリジンに到達できません",
@@ -993,8 +997,10 @@
   "significant other": "伴侶",
   "Sign In": "サインイン",
   "Sign in to your account": "アカウントにサインインする",
+  "Sign in with a passkey": "PassKeyでサインインします",
   "Sign up for an account": "アカウントにサインアップする",
   "Sikh": "シーク教",
+  "Simply connect with:": "単に接続するだけです：",
   "Slept :count hour|Slept :count hours": "睡眠時間:count時間",
   "Slice of life": "人生のひとこま",
   "Slices of life": "人生の断片",
@@ -1346,6 +1352,7 @@
   "View log": "ビュー・ログ",
   "View on map": "地図で見る",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Monica (アプリケーション) があなたを認識するまで数秒待ちます。機能するかどうかを確認するために偽の通知を送信します。",
+  "Waiting for input from browser interaction…": "ブラウザの相互作用からの入力を待っています…",
   "Waiting for key…": "キーを待っています…",
   "Walked": "歩いた",
   "Wallpaper": "壁紙",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "二要素認証を有効化した場合、ログイン時に安全かつランダムなトークンが与えられます。トークンはGoogle Authenticatorアプリから取得できます。",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "2 要素認証が有効になっている場合、認証中に安全なランダム トークンの入力を求められます。このトークンは、携帯電話の認証アプリケーションから取得できます。",
   "When was the loan made?": "借金はいつ行われましたか?",
+  "When you are ready, authenticate using the button below:": "準備ができたら、下のボタンを使用して認証します。",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "2 つの連絡先間の関係 (たとえば、父と息子の関係) を定義すると、Monica は連絡先ごとに 1 つずつ、合計 2 つの関係を作成します。",
   "Which email address should we send the notification to?": "どの電子メール アドレスに通知を送信すればよいですか?",
   "Who called?": "誰が電話したの？",
