--- a/lang/nl.json
+++ b/lang/nl.json
@@ -221,6 +221,7 @@
   "Attach": "Koppelen",
   "At which time should we send the notification, when the reminder occurs?": "Op welk tijdstip moeten wij de melding versturen, wanneer de herinnering plaatsvindt?",
   "Audio-only call": "Alleen audiogesprek",
+  "Authenticate using your password:": "Authenticeer met behulp van uw wachtwoord:",
   "Auto saved a few seconds ago": "Automatisch opgeslagen een paar seconden geleden",
   "Available modules:": "Beschikbare modules:",
   "Avatar": "Avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Vergelijkbaar met Monica:",
   "Configure how we should notify you": "Configureer hoe we u op de hoogte moeten stellen",
   "Confirm": "Bevestigen",
+  "Confirm access": "Bevestig toegang",
   "Confirm Password": "Bevestig wachtwoord",
+  "Confirm your passkey": "Bevestig uw Passkey",
   "Conflict": "Conflict",
   "Connect": "Aansluiten",
   "Connected": "Verbonden",
@@ -496,7 +499,7 @@
   "Forbidden": "Geen toegang",
   "Forgot your password?": "Wachtwoord vergeten?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Wachtwoord vergeten? Geen probleem. Geef hier je e-mailadres in en we sturen je een link via mail waarmee je een nieuw wachtwoord kan instellen.",
-  "For your security, please confirm your password to continue.": "Bevestig voor de zekerheid je wachtwoord om door te gaan.",
+  "For your security, please confirm the access to continue.": "Bevestig voor uw beveiliging de toegang om door te gaan.",
   "Found": "Gevonden",
   "Friday": "Vrijdag",
   "Friend": "Vriend",
@@ -659,8 +662,8 @@
   "Log In": "Inloggen",
   "Login": "Inloggen",
   "Login with:": "Login met:",
-  "Logout": "Uitloggen",
   "Log Out": "Uitloggen",
+  "Logout": "Uitloggen",
   "Log Out Other Browser Sessions": "Uitloggen bij alle sessies",
   "Longest streak": "Langste reeks",
   "Loop Detected": "Loop gedetecteerd",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps is een geweldig privacyalternatief, maar biedt minder details.",
   "Open Telegram to validate your identity": "Open Telegram om uw identiteit te valideren",
   "optional": "optioneel",
+  "Or": "Of",
   "Or create a new one": "Of maak een nieuwe aan",
   "Or filter by type": "Of filter op type",
   "Origin Is Unreachable": "Herkomst is onbereikbaar",
@@ -993,8 +997,10 @@
   "significant other": "wederhelft",
   "Sign In": "Aanmelden",
   "Sign in to your account": "Log in op uw account",
+  "Sign in with a passkey": "Log in met een Passkey",
   "Sign up for an account": "Meld u aan voor een account",
   "Sikh": "Sikh",
+  "Simply connect with:": "Maak gewoon verbinding met:",
   "Slept :count hour|Slept :count hours": ":count uur geslapen|:count uur geslapen",
   "Slice of life": "Deel van het leven",
   "Slices of life": "Plakjes leven",
@@ -1346,6 +1352,7 @@
   "View log": "Bekijk logboek",
   "View on map": "Bekijk op kaart",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Wacht een paar seconden totdat Monica (de applicatie) je herkent. We sturen u een valse melding om te zien of het werkt.",
+  "Waiting for input from browser interaction…": "Wachten op input van browserinteractie ...",
   "Waiting for key…": "Wachten op sleutel…",
   "Walked": "Liep",
   "Wallpaper": "Behang",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Als tweestapsverificatie is ingeschakeld, word je tijdens de authenticatie om een veilige, willekeurige token gevraagd. Je kunt dit token ophalen uit de Google Authenticator-applicatie op je telefoon.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Wanneer tweefactorauthenticatie is ingeschakeld, wordt u tijdens de authenticatie om een veilig, willekeurig token gevraagd. U kunt dit token ophalen via de Authenticator-applicatie van uw telefoon.",
   "When was the loan made?": "Wanneer is de lening verstrekt?",
+  "When you are ready, authenticate using the button below:": "Als u klaar bent, authenticeer u met de onderstaande knop:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Wanneer u een relatie tussen twee contactpersonen definieert, bijvoorbeeld een vader-zoonrelatie, maakt Monica twee relaties, één voor elk contact:",
   "Which email address should we send the notification to?": "Naar welk e-mailadres moeten we de melding sturen?",
   "Who called?": "Wie belde?",
