--- a/lang/nn.json
+++ b/lang/nn.json
@@ -221,6 +221,7 @@
   "Attach": "Feste",
   "At which time should we send the notification, when the reminder occurs?": "Når skal vi sende varselet, når påminnelsen skjer?",
   "Audio-only call": "Bare lydanrop",
+  "Authenticate using your password:": "Autentiser ved å bruke passordet ditt:",
   "Auto saved a few seconds ago": "Automatisk lagret for noen sekunder siden",
   "Available modules:": "Tilgjengelige moduler:",
   "Avatar": "Avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Sammenlignet med Monica:",
   "Configure how we should notify you": "Konfigurer hvordan vi skal varsle deg",
   "Confirm": "Bekrefte",
+  "Confirm access": "Bekreft tilgang",
   "Confirm Password": "Bekreft passord",
+  "Confirm your passkey": "Bekreft passordet ditt",
   "Conflict": "Konflikt",
   "Connect": "Koble",
   "Connected": "Tilkoblet",
@@ -496,7 +499,7 @@
   "Forbidden": "Forbode",
   "Forgot your password?": "Glemt passordet?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Glemt passordet? Ikke noe problem. Bare gi oss beskjed om e-postadressen din, så sender vi deg en lenke for tilbakestilling av passord som lar deg velge en ny.",
-  "For your security, please confirm your password to continue.": "For din sikkerhet, bekreft passordet ditt for å fortsette.",
+  "For your security, please confirm the access to continue.": "For din sikkerhet, vennligst bekreft tilgangen til å fortsette.",
   "Found": "Funnet",
   "Friday": "fredag",
   "Friend": "Venn",
@@ -659,8 +662,8 @@
   "Log In": "Logg Inn",
   "Login": "Logg inn",
   "Login with:": "Logg inn med:",
-  "Logout": "Logg ut",
   "Log Out": "Logg ut",
+  "Logout": "Logg ut",
   "Log Out Other Browser Sessions": "Logg ut andre nettleserøkter",
   "Longest streak": "Lengste rekke",
   "Loop Detected": "Løkke oppdaget",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps er et flott alternativ for personvern, men tilbyr mindre detaljer.",
   "Open Telegram to validate your identity": "Åpne Telegram for å bekrefte identiteten din",
   "optional": "valgfri",
+  "Or": "Eller",
   "Or create a new one": "Eller lag en ny",
   "Or filter by type": "Eller filtrer etter type",
   "Origin Is Unreachable": "Opprinnelsen er uoppnåelig",
@@ -993,8 +997,10 @@
   "significant other": "bedre halvdel",
   "Sign In": "Logg inn",
   "Sign in to your account": "Logg på kontoen din",
+  "Sign in with a passkey": "Logg på med en passkey",
   "Sign up for an account": "Registrer deg for en konto",
   "Sikh": "Sikh",
+  "Simply connect with:": "Bare koble til:",
   "Slept :count hour|Slept :count hours": "Sov :count time|Sov :count timer",
   "Slice of life": "Bit av livet",
   "Slices of life": "Skiver av livet",
@@ -1346,6 +1352,7 @@
   "View log": "Se Logg",
   "View on map": "Se på kart",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Vent noen sekunder til Monica (applikasjonen) kjenner deg igjen. Vi sender deg et falskt varsel for å se om det fungerer.",
+  "Waiting for input from browser interaction…": "Venter på innspill fra nettleserinteraksjon ...",
   "Waiting for key…": "Venter på nøkkel...",
   "Walked": "Gikk",
   "Wallpaper": "Bakgrunn",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Når tofaktorautentisering er aktivert, vil du bli bedt om et sikkert, tilfeldig token under autentisering. Du kan hente dette tokenet fra telefonens Google Authenticator-applikasjon.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Når tofaktorautentisering er aktivert, vil du bli bedt om et sikkert, tilfeldig token under autentisering. Du kan hente dette tokenet fra telefonens Authenticator-applikasjon.",
   "When was the loan made?": "Når ble lånet gitt?",
+  "When you are ready, authenticate using the button below:": "Når du er klar, autentiser ved hjelp av knappen nedenfor:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Når du definerer et forhold mellom to kontakter, for eksempel et far-sønn-forhold, oppretter Monica to relasjoner, en for hver kontakt:",
   "Which email address should we send the notification to?": "Hvilken e-postadresse skal vi sende varselet til?",
   "Who called?": "Hvem ringte?",
