--- a/lang/pa.json
+++ b/lang/pa.json
@@ -221,6 +221,7 @@
   "Attach": "ਨੱਥੀ ਕਰੋ",
   "At which time should we send the notification, when the reminder occurs?": "ਸਾਨੂੰ ਕਿਸ ਸਮੇਂ ਨੋਟੀਫਿਕੇਸ਼ਨ ਭੇਜਣਾ ਚਾਹੀਦਾ ਹੈ, ਜਦੋਂ ਰੀਮਾਈਂਡਰ ਆਉਂਦਾ ਹੈ?",
   "Audio-only call": "ਸਿਰਫ਼-ਆਡੀਓ ਕਾਲ",
+  "Authenticate using your password:": "ਆਪਣੇ ਪਾਸਵਰਡ ਦੀ ਵਰਤੋਂ ਕਰਕੇ ਪ੍ਰਮਾਣਿਤ ਕਰੋ:",
   "Auto saved a few seconds ago": "ਕੁਝ ਸਕਿੰਟ ਪਹਿਲਾਂ ਸਵੈਚਲਿਤ ਤੌਰ ’ਤੇ ਸੁਰੱਖਿਅਤ ਕੀਤਾ ਗਿਆ",
   "Available modules:": "ਉਪਲਬਧ ਮੋਡੀਊਲ:",
   "Avatar": "ਅਵਤਾਰ",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "ਦੀ ਤੁਲਣਾ Monica:",
   "Configure how we should notify you": "ਕੌਂਫਿਗਰ ਕਰੋ ਕਿ ਸਾਨੂੰ ਤੁਹਾਨੂੰ ਕਿਵੇਂ ਸੂਚਿਤ ਕਰਨਾ ਚਾਹੀਦਾ ਹੈ",
   "Confirm": "ਪੁਸ਼ਟੀ ਕਰੋ",
+  "Confirm access": "ਪਹੁੰਚ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ",
   "Confirm Password": "ਪਾਸਵਰਡ ਪੱਕਾ ਕਰੋ",
+  "Confirm your passkey": "ਆਪਣੀ ਪਾਸਕੀ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ",
   "Conflict": "ਟਕਰਾਅ",
   "Connect": "ਜੁੜੋ",
   "Connected": "ਜੁੜਿਆ",
@@ -496,7 +499,7 @@
   "Forbidden": "ਵਰਜਿਤ",
   "Forgot your password?": "ਆਪਣਾ ਪਾਸਵਰਡ ਭੁੱਲ ਗਏ?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "ਆਪਣਾ ਪਾਸਵਰਡ ਭੁੱਲ ਗਏ? ਕੋਈ ਸਮੱਸਿਆ ਨਹੀ. ਬੱਸ ਸਾਨੂੰ ਆਪਣਾ ਈਮੇਲ ਪਤਾ ਦੱਸੋ ਅਤੇ ਅਸੀਂ ਤੁਹਾਨੂੰ ਇੱਕ ਪਾਸਵਰਡ ਰੀਸੈਟ ਲਿੰਕ ਈਮੇਲ ਕਰਾਂਗੇ ਜੋ ਤੁਹਾਨੂੰ ਇੱਕ ਨਵਾਂ ਚੁਣਨ ਦੀ ਇਜਾਜ਼ਤ ਦੇਵੇਗਾ।",
-  "For your security, please confirm your password to continue.": "ਤੁਹਾਡੀ ਸੁਰੱਖਿਆ ਲਈ, ਕਿਰਪਾ ਕਰਕੇ ਜਾਰੀ ਰੱਖਣ ਲਈ ਆਪਣੇ ਪਾਸਵਰਡ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ।",
+  "For your security, please confirm the access to continue.": "ਤੁਹਾਡੀ ਸੁਰੱਖਿਆ ਲਈ, ਕਿਰਪਾ ਕਰਕੇ ਜਾਰੀ ਕਰਨ ਦੀ ਪਹੁੰਚ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ.",
   "Found": "ਮਿਲਿਆ",
   "Friday": "ਸ਼ੁੱਕਰਵਾਰ",
   "Friend": "ਦੋਸਤ",
@@ -659,8 +662,8 @@
   "Log In": "ਲਾਗਿਨ",
   "Login": "ਲਾਗਿਨ",
   "Login with:": "ਇਸ ਨਾਲ ਲੌਗਇਨ ਕਰੋ:",
-  "Logout": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
   "Log Out": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
+  "Logout": "ਲਾੱਗ ਆਊਟ, ਬਾਹਰ ਆਉਣਾ",
   "Log Out Other Browser Sessions": "ਹੋਰ ਬਰਾਊਜ਼ਰ ਸੈਸ਼ਨ ਲੌਗ ਆਉਟ ਕਰੋ",
   "Longest streak": "ਸਭ ਤੋਂ ਲੰਬੀ ਲਕੀਰ",
   "Loop Detected": "ਲੂਪ ਖੋਜਿਆ ਗਿਆ",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "ਓਪਨ ਸਟ੍ਰੀਟ ਮੈਪਸ ਇੱਕ ਵਧੀਆ ਪਰਦੇਦਾਰੀ ਵਿਕਲਪ ਹੈ, ਪਰ ਘੱਟ ਵੇਰਵੇ ਪੇਸ਼ ਕਰਦਾ ਹੈ।",
   "Open Telegram to validate your identity": "ਆਪਣੀ ਪਛਾਣ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਟੈਲੀਗ੍ਰਾਮ ਖੋਲ੍ਹੋ",
   "optional": "ਵਿਕਲਪਿਕ",
+  "Or": "ਜਾਂ",
   "Or create a new one": "ਜਾਂ ਇੱਕ ਨਵਾਂ ਬਣਾਓ",
   "Or filter by type": "ਜਾਂ ਕਿਸਮ ਦੁਆਰਾ ਫਿਲਟਰ ਕਰੋ",
   "Origin Is Unreachable": "ਮੂਲ ਪਹੁੰਚ ਤੋਂ ਬਾਹਰ ਹੈ",
@@ -993,8 +997,10 @@
   "significant other": "ਮਹੱਤਵਪੂਰਨ ਹੋਰ",
   "Sign In": "ਸਾਈਨ - ਇਨ",
   "Sign in to your account": "ਆਪਣੇ ਖਾਤੇ ਵਿੱਚ ਸਾਈਨ ਇਨ ਕਰੋ",
+  "Sign in with a passkey": "ਇੱਕ ਪਾਸਕੀ ਨਾਲ ਸਾਈਨ ਇਨ ਕਰੋ",
   "Sign up for an account": "ਇੱਕ ਖਾਤੇ ਲਈ ਸਾਈਨ ਅੱਪ ਕਰੋ",
   "Sikh": "ਸਿੱਖ",
+  "Simply connect with:": "ਬਸ ਨਾਲ ਜੁੜੋ:",
   "Slept :count hour|Slept :count hours": ":count ਘੰਟਾ ਸੁੱਤਾ|:count ਘੰਟੇ ਸੌਂ ਗਏ",
   "Slice of life": "ਜਿੰਦਗੀ ਦਾ ਹਿੱਸਾ",
   "Slices of life": "ਜੀਵਨ ਦੇ ਟੁਕੜੇ",
@@ -1346,6 +1352,7 @@
   "View log": "ਲੌਗ ਦੇਖੋ",
   "View on map": "ਨਕਸ਼ੇ ’ਤੇ ਦੇਖੋ",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Monica (ਐਪਲੀਕੇਸ਼ਨ) ਵੱਲੋਂ ਤੁਹਾਨੂੰ ਪਛਾਣਨ ਲਈ ਕੁਝ ਸਕਿੰਟ ਉਡੀਕ ਕਰੋ। ਅਸੀਂ ਤੁਹਾਨੂੰ ਇਹ ਦੇਖਣ ਲਈ ਇੱਕ ਜਾਅਲੀ ਸੂਚਨਾ ਭੇਜਾਂਗੇ ਕਿ ਇਹ ਕੰਮ ਕਰਦਾ ਹੈ ਜਾਂ ਨਹੀਂ।",
+  "Waiting for input from browser interaction…": "ਬ੍ਰਾ browser ਜ਼ਰ ਦੇ ਆਪਸੀ ਪਰਸਪਰ ਪ੍ਰਭਾਵ ਤੋਂ ਇਨਪੁਟ ਦੀ ਉਡੀਕ ...",
   "Waiting for key…": "ਕੁੰਜੀ ਦੀ ਉਡੀਕ ਕੀਤੀ ਜਾ ਰਹੀ ਹੈ...",
   "Walked": "ਤੁਰਿਆ",
   "Wallpaper": "ਵਾਲਪੇਪਰ",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "ਜਦੋਂ ਦੋ ਕਾਰਕ ਪ੍ਰਮਾਣਿਕਤਾ ਸਮਰਥਿਤ ਹੁੰਦੀ ਹੈ, ਤਾਂ ਤੁਹਾਨੂੰ ਪ੍ਰਮਾਣਿਕਤਾ ਦੇ ਦੌਰਾਨ ਇੱਕ ਸੁਰੱਖਿਅਤ, ਬੇਤਰਤੀਬ ਟੋਕਨ ਲਈ ਪੁੱਛਿਆ ਜਾਵੇਗਾ। ਤੁਸੀਂ ਇਸ ਟੋਕਨ ਨੂੰ ਆਪਣੇ ਫ਼ੋਨ ਦੀ Google Authenticator ਐਪਲੀਕੇਸ਼ਨ ਤੋਂ ਪ੍ਰਾਪਤ ਕਰ ਸਕਦੇ ਹੋ।",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "ਜਦੋਂ ਦੋ ਕਾਰਕ ਪ੍ਰਮਾਣਿਕਤਾ ਸਮਰਥਿਤ ਹੁੰਦੀ ਹੈ, ਤਾਂ ਤੁਹਾਨੂੰ ਪ੍ਰਮਾਣਿਕਤਾ ਦੇ ਦੌਰਾਨ ਇੱਕ ਸੁਰੱਖਿਅਤ, ਬੇਤਰਤੀਬ ਟੋਕਨ ਲਈ ਪੁੱਛਿਆ ਜਾਵੇਗਾ। ਤੁਸੀਂ ਇਸ ਟੋਕਨ ਨੂੰ ਆਪਣੇ ਫ਼ੋਨ ਦੀ Authenticator ਐਪਲੀਕੇਸ਼ਨ ਤੋਂ ਪ੍ਰਾਪਤ ਕਰ ਸਕਦੇ ਹੋ।",
   "When was the loan made?": "ਕਰਜ਼ਾ ਕਦੋਂ ਦਿੱਤਾ ਗਿਆ ਸੀ?",
+  "When you are ready, authenticate using the button below:": "ਜਦੋਂ ਤੁਸੀਂ ਤਿਆਰ ਹੋ ਤਾਂ ਹੇਠਾਂ ਦਿੱਤੇ ਬਟਨ ਦੀ ਵਰਤੋਂ ਕਰਕੇ ਪ੍ਰਮਾਣਿਤ ਕਰੋ:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "ਜਦੋਂ ਤੁਸੀਂ ਦੋ ਸੰਪਰਕਾਂ ਵਿਚਕਾਰ ਰਿਸ਼ਤੇ ਨੂੰ ਪਰਿਭਾਸ਼ਿਤ ਕਰਦੇ ਹੋ, ਉਦਾਹਰਨ ਲਈ ਇੱਕ ਪਿਤਾ-ਪੁੱਤਰ ਦਾ ਰਿਸ਼ਤਾ, Monica ਦੋ ਰਿਸ਼ਤੇ ਬਣਾਉਂਦੀ ਹੈ, ਹਰੇਕ ਸੰਪਰਕ ਲਈ ਇੱਕ:",
   "Which email address should we send the notification to?": "ਸਾਨੂੰ ਕਿਸ ਈਮੇਲ ਪਤੇ ’ਤੇ ਸੂਚਨਾ ਭੇਜਣੀ ਚਾਹੀਦੀ ਹੈ?",
   "Who called?": "ਕਿਸਨੇ ਬੁਲਾਇਆ?",
