--- a/lang/ro.json
+++ b/lang/ro.json
@@ -221,6 +221,7 @@
   "Attach": "Atașează",
   "At which time should we send the notification, when the reminder occurs?": "La ce oră ar trebui să trimitem notificarea, când are loc mementoul?",
   "Audio-only call": "Apel numai audio",
+  "Authenticate using your password:": "Autentificați -vă folosind parola:",
   "Auto saved a few seconds ago": "Salvat automat acum câteva secunde",
   "Available modules:": "Module disponibile:",
   "Avatar": "Avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Comparativ cu Monica:",
   "Configure how we should notify you": "Configurați cum ar trebui să vă anunțăm",
   "Confirm": "Confirmă",
+  "Confirm access": "Confirmați accesul",
   "Confirm Password": "Confirmare parolă",
+  "Confirm your passkey": "Confirmați -vă pasajul",
   "Conflict": "Conflict",
   "Connect": "Conectați-vă",
   "Connected": "Conectat",
@@ -496,7 +499,7 @@
   "Forbidden": "Interzis",
   "Forgot your password?": "Ați uitat parola?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Ați uitat parola? Nicio problemă. Spuneți-ne adresa dvs. de e-mail și vă vom trimite un link de resetare a parolei care vă va permite să alegeți una nouă.",
-  "For your security, please confirm your password to continue.": "Pentru securitatea dvs., vă rugăm să confirmați parola pentru a continua.",
+  "For your security, please confirm the access to continue.": "Pentru securitatea dvs., vă rugăm să confirmați accesul pentru a continua.",
   "Found": "Găsite",
   "Friday": "vineri",
   "Friend": "Prietene",
@@ -659,8 +662,8 @@
   "Log In": "Autentificare",
   "Login": "Autentificare",
   "Login with:": "Logheaza-te cu:",
-  "Logout": "Deautentificare",
   "Log Out": "Deconectează",
+  "Logout": "Deautentificare",
   "Log Out Other Browser Sessions": "Deconectați Alte Sesiuni De Browser",
   "Longest streak": "Cea mai lungă serie",
   "Loop Detected": "Bucla detectată",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps este o alternativă excelentă de confidențialitate, dar oferă mai puține detalii.",
   "Open Telegram to validate your identity": "Deschide Telegram pentru a-ți valida identitatea",
   "optional": "opțional",
+  "Or": "Sau",
   "Or create a new one": "Sau creați unul nou",
   "Or filter by type": "Sau filtrați după tip",
   "Origin Is Unreachable": "Originea este de neatins",
@@ -993,8 +997,10 @@
   "significant other": "partenerul de viaţă",
   "Sign In": "Conectează-te",
   "Sign in to your account": "Conectați-vă la contul dvs",
+  "Sign in with a passkey": "Conectați -vă cu un paskey",
   "Sign up for an account": "Înscrieți-vă pentru un cont",
   "Sikh": "Sikh",
+  "Simply connect with:": "Pur și simplu conectați -vă cu:",
   "Slept :count hour|Slept :count hours": "A dormit :count ora|Am dormit :count ore|A dormit :count de ore",
   "Slice of life": "O felie de viață",
   "Slices of life": "Bucuri de viață",
@@ -1346,6 +1352,7 @@
   "View log": "Vizualizare jurnal",
   "View on map": "Vizualizați pe hartă",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Așteptați câteva secunde ca Monica (aplicația) să vă recunoască. Vă vom trimite o notificare falsă pentru a vedea dacă funcționează.",
+  "Waiting for input from browser interaction…": "În așteptarea intrării din interacțiunea browserului ...",
   "Waiting for key…": "Se așteaptă cheia...",
   "Walked": "Mers",
   "Wallpaper": "Tapet",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Când autentificarea cu doi factori este activată, vi se va solicita un jeton sigur, aleatoriu în timpul autentificării. Puteți prelua acest jeton din aplicația Google Authenticator a telefonului.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Când autentificarea cu doi factori este activată, vi se va solicita un token securizat, aleatoriu în timpul autentificării. Puteți prelua acest token din aplicația Authenticator a telefonului.",
   "When was the loan made?": "Când s-a făcut împrumutul?",
+  "When you are ready, authenticate using the button below:": "Când sunteți gata, autentificați -vă folosind butonul de mai jos:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Când definiți o relație între două contacte, de exemplu o relație tată-fiu, Monica creează două relații, câte una pentru fiecare contact:",
   "Which email address should we send the notification to?": "La ce adresa de email trebuie sa trimitem notificarea?",
   "Who called?": "Cine a sunat?",
