--- a/lang/ru.json
+++ b/lang/ru.json
@@ -221,6 +221,7 @@
   "Attach": "Прикрепить",
   "At which time should we send the notification, when the reminder occurs?": "В какое время мы должны отправить уведомление, когда появится напоминание?",
   "Audio-only call": "Только аудиовызов",
+  "Authenticate using your password:": "Аутентификация с помощью вашего пароля:",
   "Auto saved a few seconds ago": "Авто сохранено несколько секунд назад",
   "Available modules:": "Доступные модули:",
   "Avatar": "Аватар",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "По сравнению с Monica:",
   "Configure how we should notify you": "Настройте способ уведомления вас",
   "Confirm": "Подтвердить",
+  "Confirm access": "Подтвердите доступ",
   "Confirm Password": "Подтвердить пароль",
+  "Confirm your passkey": "Подтвердите свой паски",
   "Conflict": "Конфликт",
   "Connect": "Подключить",
   "Connected": "Связанный",
@@ -496,7 +499,7 @@
   "Forbidden": "Доступ запрещен",
   "Forgot your password?": "Забыли пароль?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Забыли пароль? Нет проблем. Просто сообщите Ваш адрес электронной почты и мы пришлём Вам ссылку для сброса пароля.",
-  "For your security, please confirm your password to continue.": "Для продолжения подтвердите пароль для Вашей безопасности.",
+  "For your security, please confirm the access to continue.": "Для вашей безопасности, пожалуйста, подтвердите доступ к продолжению.",
   "Found": "Найдено",
   "Friday": "Пятница",
   "Friend": "Друг",
@@ -659,8 +662,8 @@
   "Log In": "Войти",
   "Login": "Войти",
   "Login with:": "Войдите с:",
-  "Logout": "Выйти",
   "Log Out": "Выйти",
+  "Logout": "Выйти",
   "Log Out Other Browser Sessions": "Завершить другие сессии",
   "Longest streak": "Самая длинная серия",
   "Loop Detected": "Обнаружен бесконечный цикл",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps — отличная альтернатива конфиденциальности, но предлагает меньше деталей.",
   "Open Telegram to validate your identity": "Откройте Telegram, чтобы подтвердить свою личность.",
   "optional": "необязательный",
+  "Or": "Или",
   "Or create a new one": "Или создайте новый",
   "Or filter by type": "Или отфильтровать по типу",
   "Origin Is Unreachable": "Источник недоступен",
@@ -993,8 +997,10 @@
   "significant other": "вторая половинка",
   "Sign In": "Регистрация",
   "Sign in to your account": "Войдите в свой аккаунт",
+  "Sign in with a passkey": "Войдите с пассажиром",
   "Sign up for an account": "Зарегистрируйте аккаунт",
   "Sikh": "сикх",
+  "Simply connect with:": "Просто свяжитесь с:",
   "Slept :count hour|Slept :count hours": "Спал :count час|Спал :count часа|Спал :count часов",
   "Slice of life": "Кусочек жизни",
   "Slices of life": "Кусочки жизни",
@@ -1346,6 +1352,7 @@
   "View log": "Посмотреть журнал",
   "View on map": "Посмотреть на карте",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Подождите несколько секунд, пока Monica (приложение) вас узнает. Мы отправим вам поддельное уведомление, чтобы проверить, сработает ли оно.",
+  "Waiting for input from browser interaction…": "В ожидании ввода от взаимодействия браузера…",
   "Waiting for key…": "Жду ключ…",
   "Walked": "Ходил",
   "Wallpaper": "Обои",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Если двухфакторная аутентификация включена, Вам будет предложено ввести случайный токен безопасности во время аутентификации. Вы можете получить этот токен в приложении Google Authenticator Вашего телефона.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Если включена двухфакторная аутентификация, во время аутентификации вам будет предложено ввести безопасный случайный токен. Вы можете получить этот токен из приложения Authenticator вашего телефона.",
   "When was the loan made?": "Когда был выдан кредит?",
+  "When you are ready, authenticate using the button below:": "Когда вы будете готовы, аутентифицируйте, используя кнопку ниже:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Когда вы определяете связь между двумя контактами, например связь отца и сына, Monica создает две связи, по одной для каждого контакта:",
   "Which email address should we send the notification to?": "На какой адрес электронной почты нам следует отправить уведомление?",
   "Who called?": "Который назвал?",
