--- a/lang/sv.json
+++ b/lang/sv.json
@@ -221,6 +221,7 @@
   "Attach": "Fästa",
   "At which time should we send the notification, when the reminder occurs?": "När ska vi skicka meddelandet, när påminnelsen inträffar?",
   "Audio-only call": "Samtal med endast ljud",
+  "Authenticate using your password:": "Autentisera med ditt lösenord:",
   "Auto saved a few seconds ago": "Automatiskt sparat för några sekunder sedan",
   "Available modules:": "Tillgängliga moduler:",
   "Avatar": "Avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Jämfört med Monica:",
   "Configure how we should notify you": "Konfigurera hur vi ska meddela dig",
   "Confirm": "Bekräfta",
+  "Confirm access": "Bekräfta åtkomst",
   "Confirm Password": "Bekräfta lösenordet",
+  "Confirm your passkey": "Bekräfta ditt pass",
   "Conflict": "Konflikt",
   "Connect": "Ansluta",
   "Connected": "Ansluten",
@@ -496,7 +499,7 @@
   "Forbidden": "Förbjuden",
   "Forgot your password?": "Glömt ditt lösenord?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Glömt ditt lösenord? Inga problem. Ange din e-post adress så skickar vi en återställningslänk.",
-  "For your security, please confirm your password to continue.": "För din säkerhet, bekräfta ditt lösenord för att fortsätta.",
+  "For your security, please confirm the access to continue.": "För din säkerhet, bekräfta åtkomsten att fortsätta.",
   "Found": "Hittades",
   "Friday": "fredag",
   "Friend": "Vän",
@@ -659,8 +662,8 @@
   "Log In": "Logga in",
   "Login": "Logga in",
   "Login with:": "Logga in med:",
-  "Logout": "Logga ut",
   "Log Out": "utloggning",
+  "Logout": "Logga ut",
   "Log Out Other Browser Sessions": "Logga Ut Andra Webbläsarsessioner",
   "Longest streak": "Längsta rad",
   "Loop Detected": "Slinga upptäckt",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps är ett bra sekretessalternativ, men erbjuder mindre detaljer.",
   "Open Telegram to validate your identity": "Öppna Telegram för att validera din identitet",
   "optional": "frivillig",
+  "Or": "Eller",
   "Or create a new one": "Eller skapa en ny",
   "Or filter by type": "Eller filtrera efter typ",
   "Origin Is Unreachable": "Ursprunget går inte att nå",
@@ -993,8 +997,10 @@
   "significant other": "betydande annan",
   "Sign In": "Logga in",
   "Sign in to your account": "logga in på ditt konto",
+  "Sign in with a passkey": "Logga in med en passnyckel",
   "Sign up for an account": "Registrera dig för ett konto",
   "Sikh": "Sikh",
+  "Simply connect with:": "Anslut bara till:",
   "Slept :count hour|Slept :count hours": "Sov :count timme|Sov :count timmar",
   "Slice of life": "Bit av livet",
   "Slices of life": "Skivor av livet",
@@ -1346,6 +1352,7 @@
   "View log": "Visa logg",
   "View on map": "Visa på kartan",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Vänta några sekunder tills Monica (applikationen) känner igen dig. Vi skickar ett falskt meddelande till dig för att se om det fungerar.",
+  "Waiting for input from browser interaction…": "Väntar på input från webbläsarens interaktion ...",
   "Waiting for key…": "Väntar på nyckel...",
   "Walked": "Gick",
   "Wallpaper": "Tapet",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "När tvåfaktorsautentisering är aktiverad blir du tillfrågad om en säker, slumpmässig token under autentisering. Du kan hämta denna token från telefonens Google Authenticator-program.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "När tvåfaktorsautentisering är aktiverad kommer du att bli tillfrågad om en säker, slumpmässig token under autentiseringen. Du kan hämta denna token från telefonens Authenticator-applikation.",
   "When was the loan made?": "När gjordes lånet?",
+  "When you are ready, authenticate using the button below:": "När du är redo, autentisera med knappen nedan:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "När du definierar en relation mellan två kontakter, till exempel en far-son relation, skapar Monica två relationer, en för varje kontakt:",
   "Which email address should we send the notification to?": "Vilken e-postadress ska vi skicka meddelandet till?",
   "Who called?": "Vem ringde?",
