--- a/lang/tr.json
+++ b/lang/tr.json
@@ -221,6 +221,7 @@
   "Attach": "İliştir",
   "At which time should we send the notification, when the reminder occurs?": "Hatırlatma gerçekleştiğinde bildirimi hangi saatte göndermeliyiz?",
   "Audio-only call": "Yalnızca sesli arama",
+  "Authenticate using your password:": "Şifrenizi kullanarak kimlik doğrulaması yapın:",
   "Auto saved a few seconds ago": "Birkaç saniye önce otomatik olarak kaydedildi",
   "Available modules:": "Mevcut modüller:",
   "Avatar": "avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Monica’yla karşılaştırıldığında:",
   "Configure how we should notify you": "Sizi nasıl bilgilendirmemiz gerektiğini yapılandırın",
   "Confirm": "Onayla",
+  "Confirm access": "Erişimi onaylayın",
   "Confirm Password": "Parolayı Onayla",
+  "Confirm your passkey": "Passey’inizi onaylayın",
   "Conflict": "Çakışma",
   "Connect": "Bağlamak",
   "Connected": "Bağlı",
@@ -496,7 +499,7 @@
   "Forbidden": "Yasak",
   "Forgot your password?": "Parolanızı mı unuttunuz?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Parolanızı mı unuttunuz? Sorun değil. Sadece e-posta adresinizi bize söyleyin size yeni parolanızı belirleyebileceğiniz bir parola sıfırlama linki gönderelim.",
-  "For your security, please confirm your password to continue.": "Güvenliğiniz için lütfen devam etmek için parolanızı onaylayın.",
+  "For your security, please confirm the access to continue.": "Güvenliğiniz için lütfen devam etmek için erişimi onaylayın.",
   "Found": "Bulundu",
   "Friday": "Cuma",
   "Friend": "Arkadaş",
@@ -659,8 +662,8 @@
   "Log In": "Giriş Yap",
   "Login": "Giriş Yap",
   "Login with:": "İle giriş:",
-  "Logout": "Çıkış Yap",
   "Log Out": "Çıkış Yap",
+  "Logout": "Çıkış Yap",
   "Log Out Other Browser Sessions": "Diğer Tarayıcılardaki Oturumları Sonlandır",
   "Longest streak": "En uzun seri",
   "Loop Detected": "Döngü Tespit Edildi",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Açık Sokak Haritaları harika bir gizlilik alternatifidir ancak daha az ayrıntı sunar.",
   "Open Telegram to validate your identity": "Kimliğinizi doğrulamak için Telegram’ı açın",
   "optional": "isteğe bağlı",
+  "Or": "Veya",
   "Or create a new one": "Veya yeni bir tane oluşturun",
   "Or filter by type": "Veya türe göre filtreleyin",
   "Origin Is Unreachable": "Kökeni Ulaşılamaz",
@@ -993,8 +997,10 @@
   "significant other": "hayat arkadaşı",
   "Sign In": "Kayıt olmak",
   "Sign in to your account": "hesabınıza giriş yapın",
+  "Sign in with a passkey": "Bir passey ile oturum açın",
   "Sign up for an account": "Bir hesap için kaydolun",
   "Sikh": "Sih",
+  "Simply connect with:": "Basitçe bağlanın:",
   "Slept :count hour|Slept :count hours": ":count saat uyudum",
   "Slice of life": "Hayattan bir parça",
   "Slices of life": "Hayatın dilimleri",
@@ -1346,6 +1352,7 @@
   "View log": "Günlüğü görüntüle",
   "View on map": "Haritada görüntüle",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Monica’nın (uygulamanın) sizi tanıması için birkaç saniye bekleyin. İşe yarayıp yaramadığını görmek için size sahte bir bildirim göndereceğiz.",
+  "Waiting for input from browser interaction…": "Tarayıcı etkileşiminden girdi bekliyor…",
   "Waiting for key…": "Anahtar bekleniyor…",
   "Walked": "Yürüdü",
   "Wallpaper": "Duvar kağıdı",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "İki faktörlü kimlik doğrulama etkinleştirildiğinde, kimlik doğrulama sırasında güvenli ve rastgele bir belirteç girmeniz istenir. Bu belirteci, telefonunuzun Google Authenticator uygulamasından alabilirsiniz.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "İki faktörlü kimlik doğrulama etkinleştirildiğinde, kimlik doğrulama sırasında sizden güvenli, rastgele bir belirteç istenecektir. Bu jetonu telefonunuzun Authenticator uygulamasından alabilirsiniz.",
   "When was the loan made?": "Kredi ne zaman verildi?",
+  "When you are ready, authenticate using the button below:": "Hazır olduğunuzda, aşağıdaki düğmeyi kullanarak kimlik doğrulaması yapın:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "İki kişi arasında bir ilişki (örneğin bir baba-oğul ilişkisi) tanımladığınızda Monica, her kişi için bir tane olmak üzere iki ilişki oluşturur:",
   "Which email address should we send the notification to?": "Bildirimi hangi e-posta adresine göndermeliyiz?",
   "Who called?": "Kim aradı?",
