--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -221,6 +221,7 @@
   "Attach": "附加",
   "At which time should we send the notification, when the reminder occurs?": "當提醒發生時，我們應該在什麼時間發送通知？",
   "Audio-only call": "純音訊通話",
+  "Authenticate using your password:": "使用密碼進行身份驗證：",
   "Auto saved a few seconds ago": "幾秒鐘前自動儲存",
   "Available modules:": "可用模組：",
   "Avatar": "阿凡達",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "與Monica相比：",
   "Configure how we should notify you": "配置我們如何通知您",
   "Confirm": "確認",
+  "Confirm access": "確認訪問",
   "Confirm Password": "確認密碼",
+  "Confirm your passkey": "確認您的Passkey",
   "Conflict": "衝突",
   "Connect": "連接",
   "Connected": "連接的",
@@ -496,7 +499,7 @@
   "Forbidden": "拒絕存取",
   "Forgot your password?": "忘記密碼了嗎？",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "忘記密碼？沒關係。請輸入您的電子郵件地址，我們將透過電子郵件傳送重設密碼連結給您，讓您重新設定一個新的密碼。",
-  "For your security, please confirm your password to continue.": "為了安全起見，在繼續前請先輸入您的密碼。",
+  "For your security, please confirm the access to continue.": "為了確保您的安全，請確認繼續訪問。",
   "Found": "成立",
   "Friday": "星期五",
   "Friend": "朋友",
@@ -659,8 +662,8 @@
   "Log In": "登入",
   "Login": "登入",
   "Login with:": "登入方式：",
-  "Logout": "登出",
   "Log Out": "登出",
+  "Logout": "登出",
   "Log Out Other Browser Sessions": "登出其它瀏覽器工作階段",
   "Longest streak": "最長連續紀錄",
   "Loop Detected": "檢測到環路",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps 是一個很好的隱私替代方案，但提供的細節較少。",
   "Open Telegram to validate your identity": "開啟 Telegram 驗證您的身份",
   "optional": "選修的",
+  "Or": "或者",
   "Or create a new one": "或創建一個新的",
   "Or filter by type": "或按類型過濾",
   "Origin Is Unreachable": "原點不可達",
@@ -993,8 +997,10 @@
   "significant other": "重要的另一半",
   "Sign In": "登入",
   "Sign in to your account": "登入您的帳戶",
+  "Sign in with a passkey": "登入",
   "Sign up for an account": "註冊新帳號",
   "Sikh": "錫克教",
+  "Simply connect with:": "只需與：",
   "Slept :count hour|Slept :count hours": "睡了 :count 小時",
   "Slice of life": "生活的片段",
   "Slices of life": "生活片段",
@@ -1346,6 +1352,7 @@
   "View log": "查看日誌",
   "View on map": "在地圖上查看",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "等待幾秒鐘，讓Monica（應用程式）認出您。我們會向您發送一條虛假通知，看看它是否有效。",
+  "Waiting for input from browser interaction…": "等待瀏覽器交互的輸入…",
   "Waiting for key…": "等待鑰匙...",
   "Walked": "行人徒步區",
   "Wallpaper": "壁紙",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "當啟用雙重認證時，在認證過程中會提示您輸入一個安全且隨機的權杖 (token)。您可以從手機的 Google Authenticator 應用程式中獲得此權杖 (token)。",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "啟用兩因素身份驗證後，系統將在身份驗證過程中提示您輸入安全的隨機令牌。您可以從手機的身份驗證器應用程式中檢索此令牌。",
   "When was the loan made?": "貸款是什麼時候發放的？",
+  "When you are ready, authenticate using the button below:": "準備就緒時，使用下面的按鈕進行身份驗證：",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "當您定義兩個聯絡人之間的關係（例如父子關係）時，Monica 會建立兩個關係，每個聯絡人對應一個關係：",
   "Which email address should we send the notification to?": "我們應該將通知發送到哪個電子郵件地址？",
   "Who called?": "誰打來的？",
