--- a/lang/da.json
+++ b/lang/da.json
@@ -221,6 +221,7 @@
   "Attach": "Vedhæft",
   "At which time should we send the notification, when the reminder occurs?": "På hvilket tidspunkt skal vi sende meddelelsen, når påmindelsen sker?",
   "Audio-only call": "Kun lydopkald",
+  "Authenticate using your password:": "Autentificering ved hjælp af din adgangskode:",
   "Auto saved a few seconds ago": "Automatisk gemt for et par sekunder siden",
   "Available modules:": "Tilgængelige moduler:",
   "Avatar": "Avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Sammenlignet med Monica:",
   "Configure how we should notify you": "Konfigurer, hvordan vi skal underrette dig",
   "Confirm": "Bekræft",
+  "Confirm access": "Bekræft adgang",
   "Confirm Password": "Bekræft password",
+  "Confirm your passkey": "Bekræft din passkey",
   "Conflict": "Konflikt",
   "Connect": "Forbinde",
   "Connected": "Forbundet",
@@ -496,7 +499,7 @@
   "Forbidden": "Forbudt",
   "Forgot your password?": "Glemt din adgangskode?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Glemt din adgangskode? Intet problem. Bare lad os vide din e-mail-adresse, og vi vil e-maile dig et link til nulstilling af adgangskode, der giver dig mulighed for at vælge en ny.",
-  "For your security, please confirm your password to continue.": "For din sikkerhed, skal du bekræfte din adgangskode for at fortsætte.",
+  "For your security, please confirm the access to continue.": "For din sikkerhed skal du bekræfte adgangen til at fortsætte.",
   "Found": "Fundet",
   "Friday": "Fredag",
   "Friend": "Ven",
@@ -659,8 +662,8 @@
   "Log In": "Log ind",
   "Login": "Log ind",
   "Login with:": "Login med:",
-  "Logout": "Log ud",
   "Log Out": "Log ud",
+  "Logout": "Log ud",
   "Log Out Other Browser Sessions": "Log ud af andre browsersessioner",
   "Longest streak": "Længste streak",
   "Loop Detected": "Løkke registreret",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps er et fantastisk privatlivsalternativ, men tilbyder færre detaljer.",
   "Open Telegram to validate your identity": "Åbn Telegram for at validere din identitet",
   "optional": "valgfri",
+  "Or": "Eller",
   "Or create a new one": "Eller opret en ny",
   "Or filter by type": "Eller filtrer efter type",
   "Origin Is Unreachable": "Oprindelse er uopnåelig",
@@ -993,8 +997,10 @@
   "significant other": "væsentlig anden",
   "Sign In": "Log ind",
   "Sign in to your account": "Log ind på din konto",
+  "Sign in with a passkey": "Log ind med en paskey",
   "Sign up for an account": "Tilmeld dig en konto",
   "Sikh": "Sikh",
+  "Simply connect with:": "Forbind blot med:",
   "Slept :count hour|Slept :count hours": "Sov :count time|Sov :count timer",
   "Slice of life": "Et stykke af livet",
   "Slices of life": "Skiver af liv",
@@ -1346,6 +1352,7 @@
   "View log": "Se log",
   "View on map": "Se på kort",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Vent et par sekunder, indtil Monica (applikationen) genkender dig. Vi sender dig en falsk notifikation for at se, om det virker.",
+  "Waiting for input from browser interaction…": "Venter på input fra browserinteraktion ...",
   "Waiting for key…": "Venter på nøgle...",
   "Walked": "gik",
   "Wallpaper": "Tapet",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Når tofaktorautentisering er aktiveret, bliver du bedt om et sikkert, tilfældigt token under godkendelse. Du kan hente dette token fra telefonens Google Authenticator-applikation.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Når tofaktorautentificering er aktiveret, bliver du bedt om et sikkert, tilfældigt token under godkendelse. Du kan hente dette token fra din telefons Authenticator-applikation.",
   "When was the loan made?": "Hvornår blev lånet optaget?",
+  "When you are ready, authenticate using the button below:": "Når du er klar, skal du autentificere ved hjælp af knappen nedenfor:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Når du definerer et forhold mellem to kontakter, for eksempel et far-søn forhold, opretter Monica to relationer, en for hver kontakt:",
   "Which email address should we send the notification to?": "Hvilken e-mailadresse skal vi sende meddelelsen til?",
   "Who called?": "Hvem ringede?",
