--- a/lang/pl.json
+++ b/lang/pl.json
@@ -221,6 +221,7 @@
   "Attach": "Dołącz",
   "At which time should we send the notification, when the reminder occurs?": "O której godzinie wysłać powiadomienie, kiedy nastąpi przypomnienie?",
   "Audio-only call": "Rozmowa wyłącznie audio",
+  "Authenticate using your password:": "Uwierzytelnienie za pomocą hasła:",
   "Auto saved a few seconds ago": "Automatycznie zapisano kilka sekund temu",
   "Available modules:": "Dostępne moduły:",
   "Avatar": "Awatara",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "W porównaniu do Monica:",
   "Configure how we should notify you": "Skonfiguruj sposób, w jaki mamy Cię powiadamiać",
   "Confirm": "Potwierdź",
+  "Confirm access": "Potwierdź dostęp",
   "Confirm Password": "Potwierdź Hasło",
+  "Confirm your passkey": "Potwierdź swojego passkey",
   "Conflict": "Konflikt",
   "Connect": "Połącz",
   "Connected": "Połączony",
@@ -496,7 +499,7 @@
   "Forbidden": "Zabronione",
   "Forgot your password?": "Nie pamiętasz hasła?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Nie pamiętasz hasła? Nie ma problemu. Podaj nam swój adres e-mail, a wyślemy Ci link do zresetowania hasła, który pozwoli Ci wprowadzić nowe.",
-  "For your security, please confirm your password to continue.": "Ze względów bezpieczeństwa potwierdź hasło, aby kontynuować.",
+  "For your security, please confirm the access to continue.": "Aby uzyskać bezpieczeństwo, potwierdź dostęp do kontynuacji.",
   "Found": "Znaleziono",
   "Friday": "Piątek",
   "Friend": "Przyjaciel",
@@ -659,8 +662,8 @@
   "Log In": "Zaloguj się",
   "Login": "Logowanie",
   "Login with:": "Zaloguj się z:",
-  "Logout": "Wyloguj",
   "Log Out": "Wyloguj się",
+  "Logout": "Wyloguj",
   "Log Out Other Browser Sessions": "Wyloguj inne sesje przeglądarki",
   "Longest streak": "Najdłuższa passa",
   "Loop Detected": "Wykryto pętlę",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps to świetna alternatywa zapewniająca prywatność, ale oferująca mniej szczegółów.",
   "Open Telegram to validate your identity": "Otwórz Telegram, aby potwierdzić swoją tożsamość",
   "optional": "opcjonalny",
+  "Or": "Lub",
   "Or create a new one": "Lub utwórz nowy",
   "Or filter by type": "Lub filtruj według typu",
   "Origin Is Unreachable": "Serwer źródłowy jest nieosiągalny",
@@ -993,8 +997,10 @@
   "significant other": "znaczący inny",
   "Sign In": "Zalogować się",
   "Sign in to your account": "Zaloguj się",
+  "Sign in with a passkey": "Zaloguj się z Passkey",
   "Sign up for an account": "Zaloguj się na konto",
   "Sikh": "Sikh",
+  "Simply connect with:": "Po prostu połącz się z:",
   "Slept :count hour|Slept :count hours": "Spałem :count godzinę|Spałem :count godziny|Spałem :count godzin",
   "Slice of life": "Okruchy życia",
   "Slices of life": "Kawałki życia",
@@ -1346,6 +1352,7 @@
   "View log": "Zobacz dziennik",
   "View on map": "Zobacz na mapie",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Poczekaj kilka sekund, aż Monica (aplikacja) Cię rozpozna. Wyślemy Ci fałszywe powiadomienie, aby sprawdzić, czy to działa.",
+  "Waiting for input from browser interaction…": "Oczekiwanie na wejście z interakcji przeglądarki…",
   "Waiting for key…": "Czekam na klucz…",
   "Walked": "Chodziłem",
   "Wallpaper": "Tapeta",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Gdy włączone jest uwierzytelnianie dwuskładnikowe, podczas uwierzytelniania zostanie wyświetlony monit o podanie bezpiecznego, losowego tokena. Możesz pobrać ten token z aplikacji Google Authenticator w telefonie.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Gdy włączone jest uwierzytelnianie dwuskładnikowe, podczas uwierzytelniania zostaniesz poproszony o podanie bezpiecznego, losowego tokena. Możesz pobrać ten token z aplikacji Authenticator na swoim telefonie.",
   "When was the loan made?": "Kiedy pożyczka została zaciągnięta?",
+  "When you are ready, authenticate using the button below:": "Gdy będziesz gotowy, uwierzytelnij przycisk poniżej:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Kiedy definiujesz relację pomiędzy dwoma kontaktami, na przykład relację ojciec-syn, Monica tworzy dwie relacje, po jednej dla każdego kontaktu:",
   "Which email address should we send the notification to?": "Na jaki adres e-mail mamy wysłać powiadomienie?",
   "Who called?": "Kto dzwonił?",
