--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -221,6 +221,7 @@
   "Attach": "Anexar",
   "At which time should we send the notification, when the reminder occurs?": "A que horas devemos enviar a notificação, quando ocorre o lembrete?",
   "Audio-only call": "Chamada apenas de áudio",
+  "Authenticate using your password:": "Autentique usando sua senha:",
   "Auto saved a few seconds ago": "Salva automaticamente há alguns segundos",
   "Available modules:": "Módulos disponíveis:",
   "Avatar": "avatar",
@@ -296,7 +297,9 @@
   "Compared to Monica:": "Comparado com Monica:",
   "Configure how we should notify you": "Configure como devemos notificá-lo",
   "Confirm": "Confirmar",
+  "Confirm access": "Confirme o acesso",
   "Confirm Password": "Confirmar senha",
+  "Confirm your passkey": "Confirme sua pasta passada",
   "Conflict": "Conflito",
   "Connect": "Conectar",
   "Connected": "Conectado",
@@ -496,7 +499,7 @@
   "Forbidden": "Proibido",
   "Forgot your password?": "Esqueceu a senha?",
   "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Esqueceu sua senha? Sem problemas. É só nos informar o seu e-mail que nós enviaremos para você um link para redefinição de senha que irá permitir que você escolha uma nova senha.",
-  "For your security, please confirm your password to continue.": "Para sua segurança, por favor confirme a sua senha antes de prosseguir.",
+  "For your security, please confirm the access to continue.": "Para sua segurança, confirme o acesso para continuar.",
   "Found": "Encontrado",
   "Friday": "Sexta-feira",
   "Friend": "Amigo",
@@ -659,8 +662,8 @@
   "Log In": "Entrar",
   "Login": "Entrar",
   "Login with:": "Faça login com:",
-  "Logout": "Sair",
   "Log Out": "Sair",
+  "Logout": "Sair",
   "Log Out Other Browser Sessions": "Desligar Outras Sessões do Navegador",
   "Longest streak": "Sequência mais longa",
   "Loop Detected": "Loop Detectado",
@@ -786,6 +789,7 @@
   "Open Street Maps is a great privacy alternative, but offers less details.": "Open Street Maps é uma ótima alternativa de privacidade, mas oferece menos detalhes.",
   "Open Telegram to validate your identity": "Abra o Telegram para validar sua identidade",
   "optional": "opcional",
+  "Or": "Ou",
   "Or create a new one": "Ou crie um novo",
   "Or filter by type": "Ou filtre por tipo",
   "Origin Is Unreachable": "Origem É Inacessível",
@@ -993,8 +997,10 @@
   "significant other": "outro significativo",
   "Sign In": "Entrar",
   "Sign in to your account": "Faça login em sua conta",
+  "Sign in with a passkey": "Faça login com uma pasta",
   "Sign up for an account": "Inscreva-se pra uma conta",
   "Sikh": "Sikh",
+  "Simply connect with:": "Basta conectar -se com:",
   "Slept :count hour|Slept :count hours": "Dormi :count hora|Dormi :count horas",
   "Slice of life": "Fatia de vida",
   "Slices of life": "Fatias de vida",
@@ -1346,6 +1352,7 @@
   "View log": "Ver registro",
   "View on map": "Ver no mapa",
   "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Aguarde alguns segundos para que Monica (o aplicativo) reconheça você. Enviaremos a você uma notificação falsa para ver se funciona.",
+  "Waiting for input from browser interaction…": "Aguardando a contribuição da interação do navegador…",
   "Waiting for key…": "Aguardando a chave…",
   "Walked": "Caminhou",
   "Wallpaper": "Papel de parede",
@@ -1378,6 +1385,7 @@
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Quando a autenticação em dois fatores está ativa, um token seguro e aleatório será solicitado durante a autenticação. Você deve obter este token em seu aplicativo Google Authenticator em seu telefone.",
   "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Quando a autenticação de dois fatores estiver ativada, será solicitado um token aleatório e seguro durante a autenticação. Você pode recuperar esse token no aplicativo Authenticator do seu telefone.",
   "When was the loan made?": "Quando foi feito o empréstimo?",
+  "When you are ready, authenticate using the button below:": "Quando você estiver pronto, autentique usando o botão abaixo:",
   "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Quando você define um relacionamento entre dois contatos, por exemplo, um relacionamento pai-filho, Monica cria duas relações, uma para cada contato:",
   "Which email address should we send the notification to?": "Para qual endereço de e-mail devemos enviar a notificação?",
   "Who called?": "Quem chamou?",
